<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="ok">OK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>

    <string name="Glide">Glide - Image Loading Library by BumpTech</string>
    <string name="LoadApp">LoadApp - Current repository by Udacity</string>
    <string name="Retrofit">Retrofit - Type-safe HTTp client for Android and Java by Square,Inc</string>

    <string name="Success">Success</string>
    <string name="Failed">Failed</string>

</resources>